
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct pardevice {int daisy; int port; } ;
typedef int ssize_t ;


 int ENXIO ;
 int IEEE1284_DEVICEID ;
 int IEEE1284_MODE_COMPAT ;
 int IEEE1284_MODE_NIBBLE ;
 int parport_claim_or_block (struct pardevice*) ;
 int parport_close (struct pardevice*) ;
 int parport_negotiate (int ,int) ;
 struct pardevice* parport_open (int,char*) ;
 int parport_read_device_id (int ,char*,size_t) ;
 int parport_release (struct pardevice*) ;
 int parse_data (int ,int ,char*) ;

ssize_t parport_device_id (int devnum, char *buffer, size_t count)
{
 ssize_t retval = -ENXIO;
 struct pardevice *dev = parport_open (devnum, "Device ID probe");
 if (!dev)
  return -ENXIO;

 parport_claim_or_block (dev);




 parport_negotiate (dev->port, IEEE1284_MODE_COMPAT);
 retval = parport_negotiate (dev->port,
        IEEE1284_MODE_NIBBLE | IEEE1284_DEVICEID);

 if (!retval) {
  retval = parport_read_device_id (dev->port, buffer, count);
  parport_negotiate (dev->port, IEEE1284_MODE_COMPAT);
  if (retval > 2)
   parse_data (dev->port, dev->daisy, buffer+2);
 }

 parport_release (dev);
 parport_close (dev);
 return retval;
}
